Add usage documentation, CLI script, and update environment configuration
- Created USAGE.md to provide detailed instructions for running document extraction using InternVL3.5-8B via Jupyter Notebook and CLI.
- Implemented ivl3_cli.py for command-line interface functionality, supporting evaluation and inference modes.
- Updated environment.yml to include 'typer' as a dependency for CLI functionality.

--- a/environment.yml
+++ b/environment.yml
@@ -23,6 +23,7 @@ dependencies:
     - einops>=0.6.0
     - accelerate>=0.27.0
     - pyyaml>=6.0.0
+    - typer>=0.9.0
     # FlashAttention 2.x (optional - GPU machines only)
     # Install manually on L40S/A10G: pip install flash-attn --no-build-isolation
     - jupyter>=1.0.0
