--- a/config/run_config.yml
+++ b/config/run_config.yml
@@ -32,6 +32,7 @@ output:
 
 # Processing options
 processing:
+  batch_size: null             # Images per batch (null = auto-detect from VRAM, 1 = sequential)
   bank_v2: true              # Use V2 bank statement extraction
   balance_correction: true   # Enable balance validation for bank statements
   verbose: false             # Verbose output (debug messages)
