♻️  refactor: Replace hardcoded document type config with YAML-driven lookups
   - Gap 1: DOCUMENT_TYPE normalization uses document_type_aliases from field_definitions.yaml
   - Gap 2: Centralize suffix stripping into strip_structure_suffixes() reading YAML settings
   - Gap 3: Derive non_doc_keys by cross-referencing supported_document_types from YAML
   - Gap 4: Bank statement token override reads min_tokens from field_definitions.yaml
   - Gap 5: Fallback type reads settings.fallback_type from detection YAML

--- a/config/field_definitions.yaml
+++ b/config/field_definitions.yaml
@@ -44,6 +44,7 @@ document_fields:
 
   bank_statement:
     count: 5
+    min_tokens: 1500  # Bank statements have many transactions; need more output tokens
     fields:
       - DOCUMENT_TYPE
       - STATEMENT_DATE_RANGE
