--- a/prompts/internvl3_prompts.yaml
+++ b/prompts/internvl3_prompts.yaml
@@ -344,3 +344,9 @@ prompts:
 settings:
   max_tokens: 600
   temperature: 0.0
+  # Layout variant suffixes — prompt keys like bank_statement_flat have their
+  # suffix stripped to find the base document type (BANK_STATEMENT).
+  # Add new suffixes here when creating layout variants for any document type.
+  structure_suffixes:
+    - "_flat"
+    - "_date_grouped"
