--- a/config/run_config.yml
+++ b/config/run_config.yml
@@ -4,10 +4,10 @@
 
 # Model configuration — switch type + path together
 model:
-  type: internvl3
-  path: /home/jovyan/nfs_share/models/InternVL3_5-8B
-  # type: llama
-  # path: /home/jovyan/nfs_share/models/Llama-3.2-11B-Vision-Instruct
+  # type: internvl3
+  # path: /home/jovyan/nfs_share/models/InternVL3_5-8B
+  type: llama
+  path: /home/jovyan/nfs_share/models/Llama-3.2-11B-Vision-Instruct
   max_tiles: 18          # Image tiles (H200: 18-36, V100: 14, L4: 18)
   flash_attn: true       # Use Flash Attention 2 (disable for V100)
   dtype: bfloat16        # Torch dtype (bfloat16, float16, float32)
@@ -87,5 +87,4 @@ model_loading:
   device_map: auto
   default_paths:
     - /home/jovyan/nfs_share/models/InternVL3_5-8B
-    - /models/InternVL3_5-8B
-    - ./models/InternVL3_5-8B
+    - /home/jovyan/nfs_share/models/Llama-3.2-11B-Vision-Instruct
