--- a/config/run_config.yml
+++ b/config/run_config.yml
@@ -88,3 +88,5 @@ model_loading:
   default_paths:
     internvl3: /home/jovyan/nfs_share/models/InternVL3_5-8B
     llama: /home/jovyan/nfs_share/models/Llama-3.2-11B-Vision-Instruct
+    qwen3vl: /home/jovyan/nfs_share/models/Qwen3-VL-8B-Instruct
+    glmocr: /home/jovyan/nfs_share/models/GLM-OCR
